# OptiXRayTracer

./: CMakeLists.txt  Dockerfile  main.cu
.devcontainer/: devcontainer.json
shaders/: raygen.ptx
